feat: push .envrc changes and state backend changes

--- a/.envrc
+++ b/.envrc
@@ -1,19 +1,16 @@
 NO_COLOR='\033[0m'
 YELLOW='\033[0;33m'
 
-export TF_VAR_email="REPLACE_ME" # example: mymail@mail.de
+export TF_VAR_email="victor.getz@iits-consulting.de" # example: mymail@mail.de
 
 # ArgoCD access token config, see Readme.md -> Preparation & Requirements -> Point 3
-export TF_VAR_argocd_bootstrap_project_url="REPLACE_ME" # for example https://github.com/victorgetz/otc-infrastructure-charts.git
-
-# Dockerhub credentials see Readme.md -> Preparation & Requirements -> Point 6
-export TF_VAR_dockerhub_username="REPLACE_ME"
+export TF_VAR_argocd_bootstrap_project_url="https://github.com/victorgetz/digital-x-infrastructure-charts.git" # for example https://github.com/victorgetz/otc-infrastructure-charts.git
 
 #informations from the credentials e-mail
-export OS_DOMAIN_NAME="REPLACE_ME" # See E-Mail with credentials (OS_DOMAIN_NAME)
-export OS_PROJECT_NAME="REPLACE_ME" # See E-Mail with credentials (OS_PROJECT_NAME)
-export TF_VAR_context="REPLACE_ME" # See E-Mail with credentials (TF_VAR_context)
-export OS_USERNAME="REPLACE_ME" # See E-Mail with credentials (OS_USERNAME)
+export OS_DOMAIN_NAME='OTC-EU-DE-00000000001000058635'
+export OS_PROJECT_NAME='eu-de_digitalx'
+export TF_VAR_context="digitalx" # See E-Mail with credentials (TF_VAR_context)
+export OS_USERNAME="cloudAdmin" # See E-Mail with credentials (OS_USERNAME)
 
 export TF_VAR_region="eu-de"
 export REGION=$TF_VAR_region
